<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue_background"
        android:padding="@dimen/padding_large">

        <!-- Hell yeah, fucking monday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partly_cloudy"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_mon"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Tuesday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rain_sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showers"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_tue"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Wednesday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rain_sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showers"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_wed"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Thursday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rain_sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scattered_showers"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_thu"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Friday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostly_cloudy"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_fri"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Saturday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partly_cloudy"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_sat"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Sunday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thunder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thunderstorms"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_sun"
                android:textSize="@dimen/text_size_small"
                android:paddingStart="@dimen/padding_large"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
