<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gold"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/weather_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_25c"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunny"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        android:layout_below="@id/weather_temperature"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sunny_1"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/weather_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_york_usa"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/weather_icon" />
</RelativeLayout>
